--- a/JaalSampleApp/package.json
+++ b/JaalSampleApp/package.json
@@ -2,15 +2,19 @@
   "name": "jaalsampleapp",
   "version": "0.0.0",
   "private": true,
+  "type": "module",
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./server/bin/www"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.279.0",
+    "aws-sdk": "^2.1323.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "npm-run-all": "^4.1.5"
   }
 }
