--- a/buildspec.yml
+++ b/buildspec.yml
@@ -13,10 +13,10 @@ phases:
 artifacts:
   files:
     # - yarn.lock
-    - src/server/bin/www.js
-    - src/server/app.js
-    - src/node_modules/**/*
-    - src/package.json
+    - server/bin/www.js
+    - server/app.js
+    - node_modules/**/*
+    - package.json
     # - "build/**/*"
     # - ".platform/**/*" # AWS Elastic Beanstalk configuration files
     # - ".ebextensions/**/*" # AWS Elastic Beanstalk configuration files
