[DEVUVA-34] Including routes in buildspec

--- a/.elasticbeanstalk/config.yml
+++ b/.elasticbeanstalk/config.yml
@@ -1,4 +1,6 @@
 branch-defaults:
+  DEVUVA-34-Setup-Research-CodeBuild:
+    environment: Jaal-WebApp
   default:
     environment: Jaal-WebApp
     group_suffix: null
