[DEVUVA-34] Beanstalk mod for utils

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -17,6 +17,7 @@ artifacts:
     - server/app.js
     - server/routes/*
     - server/views/*
+    - server/utils/*
     - node_modules/**/*
     - package.json
     # - "build/**/*"
