[DEVUVA-34] Buildspec 1000001th mod

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -20,6 +20,7 @@ artifacts:
     - server/utils/*
     - server/libs/*
     - public/*
+    - public/**/*
     - node_modules/**/*
     - package.json
     # - "build/**/*"
