--- a/signsealwebapp/server/package.json
+++ b/signsealwebapp/server/package.json
@@ -3,12 +3,16 @@
   "version": "1.0.0",
   "description": "integrate React and Node.js Express Rest Apis on same server",
   "main": "index.js",
+  "type": "module",
   "scripts": {
+    "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "mysql2": "^3.2.0"
   }
 }
