--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "react-pdf": "^6.2.2",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "mysql2": "^3.2.0"
   },
   "scripts": {
     "start": "npm run serverstart && npm run clientstart",
