--- a/package.json
+++ b/package.json
@@ -8,19 +8,20 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.3.0",
+    "concurrently": "^7.6.0",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
     "mysql": "^2.18.1",
+    "mysql2": "^3.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-pdf": "^6.2.2",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4",
-    "cors": "^2.8.5",
-    "express": "^4.18.2",
-    "mysql2": "^3.2.0"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "npm run serverstart && npm run clientstart",
+    "start": "concurrently --kill-others \"npm run clientstart\" \"npm run serverstart\"",
     "clientstart": "react-scripts start",
     "serverstart": "cd server && npm start",
     "build": "react-scripts build",
