--- a/package.json
+++ b/package.json
@@ -3,16 +3,14 @@
   "version": "0.1.0",
   "type": "module",
   "private": true,
+  "homepage": ".",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.3.0",
     "concurrently": "^7.6.0",
-    "cors": "^2.8.5",
-    "express": "^4.18.2",
     "mysql": "^2.18.1",
-    "mysql2": "^3.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-pdf": "^6.2.2",
@@ -25,10 +23,11 @@
     "clientstart": "react-scripts start",
     "serverstart": "cd server && npm start",
     "build": "react-scripts build",
+    "startbuild": "concurrently --kill-others \"serve -s build\" \"npm run serverstart\"",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "proxy": "http://localhost:5000",
+  "proxy": "http://localhost:7000",
   "eslintConfig": {
     "extends": [
       "react-app",
