--- a/buildspec.yml
+++ b/buildspec.yml
@@ -9,6 +9,7 @@ phases:
       - cd server && npm install
   build:
     commands:
+      - npm run build
       - echo Build Started
 
 artifacts:
@@ -20,7 +21,8 @@ artifacts:
     - server/**/*
     - node_modules/**/*
     - package.json
-    # - "build/**/*"
+    - build/*
+    - build/**/*
     # - ".platform/**/*" # AWS Elastic Beanstalk configuration files
     # - ".ebextensions/**/*" # AWS Elastic Beanstalk configuration files
   discard-paths: no
