--- a/buildspec.yml
+++ b/buildspec.yml
@@ -6,11 +6,12 @@ phases:
       nodejs: latest
     commands:
       - npm install
-      - cd server && npm install
   build:
     commands:
       - npm run build
       - echo Build Started
+      - cd server && npm install
+      - echo server installed
 
 artifacts:
   files:
