--- a/server/package.json
+++ b/server/package.json
@@ -15,7 +15,9 @@
     "@aws-sdk/client-cognito-identity-provider": "^3.292.0",
     "@aws-sdk/client-s3": "^3.292.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.2.0"
   }
 }
