--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,5 @@ server/package-lock.json
 server/package.json
 signsealwebapp/package-lock.json
 package-lock.json
+
+server/aws/libs/devAWSCreds.js
