removed all client ids from code before moving to public

--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,4 @@
-DB_HOST=signseal-documents.ch7sjvzprjnp.eu-central-1.rds.amazonaws.com
+DB_HOST=XXXXXXX
 DB_DATABASE=database
 DB_USER=root
-DB_PASS=passJaal2023!
+DB_PASS=XXXXXXXX
